# djinn

./: '  .gitignore  CLAUDE.md  Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix  flake.nix.bak  justfile  read_logs.nu  shell.nix  typos.toml
.claude/: settings.json
.github/workflows/: rust.yml
api/djinn/: bruno.json  complete.bru  healthcheck.bru
api/mistral_rs/: bruno.json  chat completions.bru  healthcheck.bru  models.bru
api/mistral_rs/environments/: hoss.bru
configs/: image-gen.schema.json  image-gen.toml
configs/lm/: model-run.schema.json  run-config.schema.json  run-config.toml
configs/model/: model.schema.json  q_mistral.toml  starcoder.toml
configs/server/: server.schema.json  test.toml
djinn-cli/: Cargo.toml
djinn-cli/src/: clip.rs  main.rs  server.rs  siglip.rs  vision_encoder.rs
djinn-core/: Cargo.toml
djinn-core/src/: device.rs  font.rs  hf_hub_ext.rs  lib.rs  tensor_ext.rs  token_output_stream.rs
djinn-core/src/config/: mod.rs  xdg.rs
djinn-core/src/image/: clip.rs  config.rs  error.rs  gen.rs  mod.rs  siglip.rs  vision_encoder_ext.rs
djinn-core/src/image/snapshots/: djinn_core__image__config__tests__full_template_snapshot.snap
djinn-core/src/lm/: config.rs  mod.rs  model.rs
djinn-core/src/lm/snapshots/: djinn_core__lm__config__tests__full_template_snapshot.snap
djinn-core/src/yolov8/: args.rs  mod.rs
djinn-rs/: .gitignore  Cargo.nix  Cargo.toml  README.md  REAMDE.md  flake.nix  rust-toolchain.toml  shell.nix
djinn-rs/api/djinn/: complete-form.bru  complete.bru  index.bru
djinn-rs/api/djinn/environments/: hoss.bru
djinn-rs/configs/: mistral.pkl
djinn-rs/configs/mistral/: fib.toml  name.toml
djinn-rs/configs/model/: q_mistral.toml  starcoder.toml
djinn-rs/configs/server/: test.toml
djinn-rs/djinn-cli/: Cargo.toml
djinn-rs/djinn-cli/src/: main.rs  mistral.rs  server.rs  yolov8.rs
djinn-rs/djinn-core/: Cargo.toml
djinn-rs/djinn-core/src/: config.rs  device.rs  error.rs  lib.rs  lm.rs  text_generator.rs  token_output_stream.rs  util.rs
djinn-rs/djinn-core/src/llama/: mod.rs
djinn-rs/djinn-core/src/lm/: config.rs  mod.rs  model.rs
djinn-rs/djinn-core/src/lm/mistral/: config.rs  mod.rs  model.rs
djinn-rs/djinn-core/src/mistral/: config.rs  mod.rs  model.rs
djinn-rs/djinn-core/src/yolov8/: model.rs
djinn-rs/djinn-server/: Cargo.toml
djinn-rs/djinn-server/assets/: styles.css
djinn-rs/djinn-server/src/: lib.rs  main.rs
djinn-rs/djinn-server/src/handlers/: complete.rs  index.rs  mod.rs
djinn-rs/djinn-server/src/server/: mod.rs
djinn-rs/djinn-server/templates/: base.html  index.html  response.html
djinn-rs/scripts/: nushell.nu
djinn-rs/src/: error.rs  main.rs  text_generator.rs  token_output_stream.rs
djinn-rs/src/llama/: mod.rs
djinn-rs/src/mistral/: config.rs  mod.rs  model.rs
djinn-rs/src/server/: mod.rs
djinn-rs/src/yolov8/: args.rs  mod.rs  model.rs
djinn-server/: Cargo.toml  package.json
djinn-server/assets/: app.js  app.test.js  clip.js  index.html  styles.css
djinn-server/src/: error.rs  lib.rs  openapi.rs
djinn-server/src/clip/: mod.rs
djinn-server/src/complete/: mod.rs
djinn-server/src/server/: mod.rs
djinn-server/src/ui/: mod.rs
ollama/: Cargo.toml
ollama-cli/: Cargo.toml  default_keymap.toml
ollama-cli/bruno/: chat.bru  create model with system.bru  list local models.bru  list running models.bru  pull a model.bru  show info.bru
ollama-cli/scripts/: nushell.nu
ollama-cli/src/: config.rs  cursor.rs  error.rs  fs_ext.rs  lm.rs  main.rs  model_definition.rs
ollama-cli/src/ollama/: embeddings.rs  generate.rs  mod.rs
ollama-cli/src/tui/: mod.rs  model_context.rs  popup.rs  text.rs  widgets_ext.rs
ollama-cli/src/tui/chat/: mod.rs
ollama-cli/src/tui/event/: .mod.rs.pending-snap  action.rs  mod.rs
ollama-cli/src/tui/event/snapshots/: ollama_cli__tui__event__tests__load_default_keymap.snap
ollama-cli/src/tui/generate/: mod.rs
ollama-cli/src/tui/input/: mod.rs
ollama-cli/src/tui/messages/: mod.rs  state.rs  widget_item.rs
ollama-cli/src/tui/models/: mod.rs  model_info.rs  model_list.rs  modelfile.rs
ollama-cli/src/tui/nav/: mod.rs
ollama-cli/src/tui/popup/: form_enter.rs
ollama/bruno/: embeddings.bru
ollama/bruno/environments/: local_proxy.bru
ollama/bruno/proxied/: chat.bru
ollama/ollama/: chat.bru  embeddings.bru  generate.bru  list models.bru  pull a model.bru  show info.bru
ollama/ollama-cli/: Cargo.toml  example_output.txt
ollama/ollama-cli/scripts/: nushell.nu
ollama/ollama-cli/src/: bytes_size.rs  error.rs  lm.rs  main.rs
ollama/ollama-cli/src/ollama/: chat.rs  embeddings.rs  generate.rs  mod.rs
ollama/ollama-cli/src/ollama/modelfile/: error.rs  mod.rs  nom.rs  parser.rs  test_data.rs  tests.rs
ollama/ollama-cli/src/ollama/modelfile/snapshots/: ollama_cli__ollama__modelfile__tests__snapshot_render.snap
ollama/ollama-cli/src/ollama/modelfile/testdata/: adapters.txt  licenses.txt  messages.txt  parameters.txt  systems.txt
ollama/ollama-cli/src/tui/: event.rs  input_context.rs  mod.rs  model_context.rs  widgets_ext.rs
ollama/ollama-cli/src/tui/chat/: mod.rs
ollama/ollama-cli/src/tui/input/: mod.rs
ollama/ollama-cli/src/tui/messages/: mod.rs  state.rs  view.rs  widget.rs  widget_rendering.rs  widget_state.rs
ollama/ollama-cli/src/tui/models/: mod.rs  model_info.rs  model_list.rs  modelfile.rs
ollama/ollama-cli/test/: gemma2:latest.Modelfile  llama3.1:latest.Modelfile  llama3.1:latest.model.json  llama3.2:latest.Modelfile  mistral-nemo:latest.Modelfile  mistral-nemo:latest.model.json  mxbai-embed-large:latest.Modelfile  mxbai-embed-large:latest.model.json  qwen2.5:latest.Modelfile  starcoder2:latest.Modelfile  starcoder2:latest.model.json
ollama/ollama/OpenAI/: chat.bru
ollama/ollama/environments/: local.bru  tunnel.bru
ollama/ollama/proxied/: health check.bru
ollama/src/tui/: event.rs
ollama/src/tui/messages/: mod.rs
prompts/: reflect.md
prompts/system/: help_chris.txt
python/: pyproject.toml
python/src/create/: test.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+1 files in other folders)
