[workspace]
members = [ "djinn-cli","djinn-core", "djinn-server", "ollama-cli" ]
default-members = ["djinn-cli", "ollama-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chris Overcash"]

[workspace.dependencies]
accelerate-src = "0.3.2"
anyhow = "1.0.75"
async-stream = "0.3.5"
axum = "0.7.5"
axum-streams = { version = "0.12.0", features = ["json"] }
candle-core = { version = "0.6.0" }
candle-nn = { version = "0.6.0" }
candle-transformers = { version = "0.6.0" }
cfg-if = "1.0.0"
clap = { version = "4.4.5", features = ["derive"] }
derive-new = "0.5.9"
derive_builder = "0.13.0"
djinn-core = { path = "./djinn-core" }
djinn-server = { path = "./djinn-server" }
futures = "0.3.30"
genawaiter = { version = "0.99.1", features = ["futures03"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
image = "0.24.7"
imageproc = "0.23.0"
markdown = "0.3.0"
metal = "0.27.0"
project-root = "0.2.2"
rand = "0.8.5"
rusttype = "0.9.3"
safetensors = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.56"
tokenizers = "0.14.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower = { version = "0.4.13", features = ["log", "util"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"]}
toml = "0.8.9"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.17"
