[workspace]
members = [ "djinn-cli","djinn-core", "djinn-server"]
default-members = ["djinn-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chris Overcash"]

[workspace.dependencies]
ab_glyph = "0.2.29"
accelerate-src = "0.3.2"
anyhow = "1.0.97"
async-stream = "0.3.6"
axum = "0.8.3"
axum-streams = { version = "0.20.0", features = ["json"] }
candle-core = { version = "0.8.4" }
candle-nn = { version = "0.8.4" }
candle-transformers = { version = "0.8.4" }
cfg-if = "1.0.0"
clap = { version = "4.5.35", features = ["derive"] }
derive-new = "0.7.0"
derive_builder = "0.20.2"
djinn-core = { path = "./djinn-core" }
djinn-server = { path = "./djinn-server" }
futures = "0.3.31"
genawaiter = { version = "0.99.1", features = ["futures03"] }
hf-hub = { version = "0.4.2", features = ["tokio"] }
image = "0.25.6"
imageproc = "0.25.0"
markdown = "0.3.0"
metal = "0.32.0"
project-root = "0.2.2"
rand = "0.9.0"
rusttype = "0.9.3"
safetensors = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokenizers = "0.21.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tower = { version = "0.5.2", features = ["log", "util"] }
tower-http = { version = "0.6.2", features = ["trace", "fs"]}
toml = "0.8.20"
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
