[package]
name = "djinn-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "schema-gen"
path = "src/bin/schema-gen.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive", "string"] }
djinn-core.workspace = true
djinn-server.workspace = true
futures.workspace = true
markdown.workspace = true
project-root.workspace = true
rand.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
