[package]
name = "djinn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
resolver = "2"


[dependencies]
ab_glyph.workspace = true
accelerate-src = { workspace = true, optional = true }
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
axum-streams.workspace = true
bon.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
cfg-if.workspace = true
clap.workspace = true
derive-new.workspace = true
derive_builder.workspace = true
futures.workspace = true
genawaiter.workspace = true
hf-hub.workspace = true
image.workspace = true
imageproc.workspace = true
metal = { workspace = true, optional = true }
project-root.workspace = true
rand.workspace = true
rusttype.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
utoipa = { workspace = true, optional = true }
xdg.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[features]
default = []
# Enables `clap::Args` derives on core config structs (`GenConfig`, `RunConfig`),
# allowing them to be embedded directly in CLI commands.
# Note: `clap` is already an unconditional dependency (used by `Device::ValueEnum`
# and `gen::Args`); this feature only gates the additional `Args` derives.
clap = []
fixed-seed = []
openapi = ["dep:utoipa"]
cuda = [
	"candle-core/cuda",
	"candle-nn/cuda",
	"candle-transformers/cuda",
]
mac = [
	"dep:metal",
	"dep:accelerate-src",
	"candle-core/metal",
	"candle-nn/metal",
	"candle-transformers/metal",
]
