[package]
name = "djinn-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accelerate-src = "0.3.2"
anyhow = "1.0.75"
candle-core = { version = "0.2.2", features = ["accelerate"] }
candle-nn = { version = "0.2.2", features = ["accelerate"] }
candle-transformers = { version = "0.2.2", features = ["accelerate"] }
clap = { version = "4.4.5", features = ["derive"] }
derive-new = "0.5.9"
hf-hub = "0.3.1"
image = "0.24.7"
imageproc = "0.23.0"
project-root = "0.2.2"
rusttype = "0.9.3"
safetensors = "0.3.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokenizers = "0.14.0"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
