[package]
name = "djinn-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
accelerate-src = "0.3.2"
anyhow = "1.0.75"
async-stream = "0.3.5"
axum = "0.7.4"
candle-core = { version = "0.3.3", features = ["accelerate"] }
candle-nn = { version = "0.3.3", features = ["accelerate"] }
candle-transformers = { version = "0.3.3", features = ["accelerate"] }
clap = { version = "4.4.5", features = ["derive"] }
derive-new = "0.5.9"
derive_builder = "0.13.0"
futures-util = "0.3.30"
genawaiter = { version = "0.99.1", features = ["futures03"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
image = "0.24.7"
imageproc = "0.23.0"
project-root = "0.2.2"
rusttype = "0.9.3"
safetensors = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.56"
tokenizers = "0.14.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
toml = "0.8.9"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
