[package]
name = "djinn-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
candle-core.workspace = true
axum-streams.workspace = true
derive-new.workspace = true
derive_builder.workspace = true
djinn-core = { workspace = true, features = ["openapi"] }
futures.workspace = true
markdown.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
