[package]
name = "ollama-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-stream = "0.3.5"
bon = "3.3.2"
chrono = "0.4.38"
chumsky = "0.9.3"
clap = { version = "4.5.16", features = ["derive", "string"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = ["display", "deref", "from", "as_ref", "into_iterator"] }
edit = "0.1.5"
extend = "1.2.0"
futures = "0.3.30"
itertools = "0.13.0"
keymap = { git = "https://github.com/covercash2/keymap-rs", features = ["crossterm"] }
linemux = "0.3"
# modelfile = "0.2.1"
modelfile = { path = "/Users/chrash/github/covercash2/modelfile/" }
nom = "7.1.3"
ollama-rs = { version = "0.2.1", features = ["stream"] }
ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
serde_with = "3.11.0"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.13.0"
textwrap = "0.16.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
unicode-width = "0.2.0"
url = { version = "2.5.2", features = ["serde"] }
xdg = "2.5.2"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json", "toml"] }
pretty_assertions = "1.4.1"
rstest = "0.23.0"
