[package]
name = "djinn-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
djinn-core.workspace = true
djinn-server.workspace = true
futures-util.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
tracing-log = "0.2.0"
tracing-subscriber.workspace = true
