[package]
name = "djinn-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
askama_axum = "0.4.0"
async-stream.workspace = true
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive", "string"] }
djinn-core.workspace = true
djinn-server.workspace = true
futures-util.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower = "0.4.13"
tower-http = "0.5.2"
tracing.workspace = true
tracing-chrome.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
