[package]
name = "djinn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
resolver = "2"


[dependencies]
accelerate-src = { workspace = true, optional = true }
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
axum-streams.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
cfg-if.workspace = true
clap.workspace = true
derive-new.workspace = true
derive_builder.workspace = true
futures.workspace = true
genawaiter.workspace = true
hf-hub.workspace = true
image.workspace = true
imageproc.workspace = true
metal = { workspace = true, optional = true }
project-root.workspace = true
rusttype.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["fixed-seed"]
fixed-seed = []
cuda = [
	"candle-core/cuda",
	"candle-nn/cuda",
	"candle-transformers/cuda",
]
mac = [
	"dep:metal",
	"dep:accelerate-src",
	"candle-core/metal",
	"candle-nn/metal",
	"candle-transformers/metal",
]
