[package]
name = "djinn-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
axum-streams.workspace = true
derive-new.workspace = true
derive_builder.workspace = true
djinn-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
