[package]
name = "ollama-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.16", features = ["derive", "string"] }
futures = "0.3.30"
ollama-rs = { version = "0.2.0", features = ["stream"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
