[package]
name = "ollama-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-stream = "0.3.5"
clap = { version = "4.5.16", features = ["derive", "string"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
extend = "1.2.0"
futures = "0.3.30"
ollama-rs = { version = "0.2.1", features = ["stream"] }
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
textwrap = "0.16.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
